--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -31,7 +31,6 @@
             ],
             "styles": [
               "src/loading.css",
-              "@angular/material/prebuilt-themes/rose-red.css",
               "src/styles.scss"
             ],
             "scripts": []
@@ -88,10 +87,7 @@
                 "input": "public"
               }
             ],
-            "styles": [
-              "@angular/material/prebuilt-themes/rose-red.css",
-              "src/styles.scss"
-            ],
+            "styles": ["src/styles.scss"],
             "scripts": []
           }
         }
